@@ -1,3 +1,8 @@
+2009-03-28  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/renderer/xy/AbstractXYItemRenderer.java
+    (findRangeBounds): Handle case where plot is null.
+
 2009-03-27  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/renderer/xy/YIntervalRenderer.java
